<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TITULO -->
    <TextView
        android:text="@string/lista_abogados"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- BUSCADOR -->
    <EditText
        android:id="@+id/txtBuscar"
        android:hint="@string/buscar_abogado"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <!-- FILTROS -->
    <RadioGroup
        android:id="@+id/radioFiltro"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbNombre"
            android:text="@string/buscar_nombre"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbId"
            android:text="@string/buscar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>

        <RadioButton
            android:id="@+id/rbDni"
            android:text="@string/buscar_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>

    </RadioGroup>

    <!-- BOTON BUSCAR -->
    <Button
        android:id="@+id/btnBuscar"
        android:text="@string/buscar"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- BOTON LIMPIAR -->
    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mostrar todos"/>

    <!-- LISTA -->
    <ListView
        android:id="@+id/listaAbogados"
        android:dividerHeight="8dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- PAGINACION -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAnterior"
            android:text="@string/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/txtPagina"
            android:text="Página 1"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSiguiente"
            android:text="@string/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>